force-app/main/default/objects/Guest_Detail__c/fields/Adults__c.field-meta.xml
<CustomField>
    <fullName>Adults__c</fullName>
    <label>Adults</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>