force-app/main/default/objects/Guest_Detail__c/fields/Children__c.field-meta.xml
<CustomField>
    <fullName>Children__c</fullName>
    <label>Children</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>